# chat-bot

./: .gitignore  .prettierignore  Cargo.toml  README.md  package-lock.json  package.json
apps/: .prettierignore  README.md  package-lock.json  package.json
apps/api-server/: Cargo.toml  README.md
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/ui/: README.md
apps/desktop/scripts/: tauri-preflight.mjs
apps/desktop/src/: index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/src/: index.css  main.tsx
apps/src-tauri/: Cargo.toml  tauri.conf.json
apps/src/components/: GlobalErrorToast.tsx  TaskPanel.tsx  ThemeToggle.tsx
apps/src/hooks/: useGlobalErrorToast.ts  useSwrRequest.ts  useTasks.ts
apps/src/lib/: authApi.ts  errorHandling.ts  http.ts  taskApi.ts
apps/src/pages/: WorkbenchPage.tsx
apps/src/providers/: SwrProvider.tsx  ThemeProvider.tsx
apps/web/: package.json
crates/api-contracts/: Cargo.toml
crates/application/: Cargo.toml
crates/cli/: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/server/: Cargo.toml  README.md
crates/server/src/: main.rs
crates/server/src/bootstrap/: mod.rs
crates/server/src/routes/: auth.rs  health.rs  tasks.rs
crates/server/src/state/: mod.rs
docs/architecture/: project-structure.md  storage.md  task-and-tool-runtime.md  task-model.md
docs/design/: construct-v2.md  construct.md  desktop-agent-workbench-design.md  desktop-agent-workbench-detail.md  imgtofuncrion.md  workbench-modules.md
(+61 files in other folders)
