[workspace]
resolver = "2"
members = [
  "apps/api-server",
  "apps/desktop/src-tauri",
  "crates/api-contracts",
  "crates/domain",
  "crates/application"
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["MAXAI"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
